# agentics

./: .gitignore  README.md  agentic.py  base.py  examples.py  main.py  pyproject.toml  requirements-dev.txt  test_agentic.py  tools_agentic.py  utils.py
.github/workflows/: publish_to_pypi.yml
src/: __init__.py  llm.py  utils.py
src/agentics/dspy_core/: base.py
src/agentix/: __init__.py  llm.py
tests/: test_llm.py
