[project]
name = "agentix"
version = "0.1.0"
authors = [
    { name = "Facundo Goiriz", email = "facundogoiriz@gmail.com" },
]
description = "A minimal LLM agent library"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "openai>=1.58.1",
    "pydantic>=2.10.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentix"] 

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]